Newline between paragraphs instead of indenting -> parskip package with parfill option

--- a/BetterTeX.tex
+++ b/BetterTeX.tex
@@ -62,6 +62,7 @@
 \usepackage{ellipsis}
 \usepackage{bigfoot}
 \usepackage{lipsum}
+\usepackage[parfill]{parskip}
 
 \setkomafont{disposition}{\normalfont}
 \setkomafont{title}{\normalfont\bfseries\scshape\Huge}
