--- a/BetterTeX.tex
+++ b/BetterTeX.tex
@@ -82,6 +82,11 @@
 % \usepackage{glossaries}
 \usepackage{setspace}
 
+% quotation style
+\usepackage[autostyle=true,german=swiss]{csquotes}
+\shorthandoff{"}
+\MakeOuterQuote{"}
+
 % Biblio
 \usepackage[
 	citestyle=numeric,
